# carnagion.github.io

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: publish.yml
assets/: style.css
content/: blog.md  index.md  reviews.md
content/blog/: hobbying-again.md  monadic-metaheuristics.md  over-engineering-playlist-generation.md
content/reviews/: metal-forth-babymetal.md  the-living-measure-of-time-jurojin.md
css/: borders.css  colors.css  sizing.css  spacing.css
docs/: 404.html  blog.html  contact.html  index.html  projects.html
docs/blog/: atom.xml  over-engineering-playlist-generation.html
docs/css/: borders.css  colors.css  flex.css  sizing.css  spacing.css  text.css
docs/js/: equalize.js
docs/projects/: addonsettings.html  advent.html  birthbot.html  gdserializer.html  insectoids.html  jabberwock.html  lamb.html  linq.html  matrices.html  modot.html
hat/: 404.hat  contact.hat  projects.hat
hat/projects/: birthbot.hat  lamb.hat  matrices.hat
in/: index.hat
in/projects/: addonsettings.hat  advent.hat  gdserializer.hat  insectoids.hat  jabberwock.hat  linq.hat  modot.hat
md/: 404.md  contact.md  index.md  projects.md
md/projects/: addonsettings.md  advent.md  birthbot.md  gdserializer.md  insectoids.md  jabberwock.md  lamb.md  linq.md  matrices.md  (+1 more)
src/: main.rs  markdown.rs  templates.rs
templates/: 404.html  atom.xml  blog.html  index.html  page.html  reviews.html
tmpl/: contact.hat  footer.hat  grid.hat  header.hat  meta.hat  page.hat  project.hat
vars/: 404.toml  contact.toml  footer.toml  header.toml  index.toml  projects.toml
(+35 files in other folders)
