[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
askama = "0.14.0"
comrak = { version = "0.41.0", default-features = false, features = ["shortcodes"] }                                           # NOTE: `comrak`'s default features include a CLI with `clap`, which we don't need.
inkjet = { version = "0.11.1", default-features = false, features = ["html", "theme", "language-rust", "language-plaintext"] } # NOTE: `inkjet` includes grammars for all languages by default, but we only need syntax highlighting for a small subset of them.
jiff = { version = "0.1.14", features = ["serde"] }
latex2mathml = "0.2.3"
serde = { version = "1.0.214", features = ["derive"] }
slug = "0.1.6"
thiserror = "2.0.1"
toml = "0.8.19"
ureq = { version = "3.0.4", features = ["json"] }
uuid = { version = "1.12.1", features = ["serde"] }
walkdir = "2.5.0"
